--- a/tailwindlast_admin/package.json
+++ b/tailwindlast_admin/package.json
@@ -9,18 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.7.0",
     "@prisma/client": "5.20.0",
-    "next": "14.2.14",
-    "react": "^18",
-    "react-dom": "^18",
-    "xlsx-populate": "^1.21.0"
+    "next": "13.5.7",
+    "next-auth": "^4.24.8",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "xlsx-populate": "^1.21.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.14",
+    "eslint-config-next": "13.5.7",
     "postcss": "^8",
     "prisma": "^5.20.0",
     "tailwindcss": "^3.4.1",
