--- a/tailwindlast_admin/package.json
+++ b/tailwindlast_admin/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.0",
     "@prisma/client": "5.20.0",
-    "next": "13.5.7",
+    "classnames": "^2.5.1",
+    "next": "14.2.15",
     "next-auth": "5.0.0-beta.19",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -19,6 +20,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/classnames": "^2.3.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
