--- a/tailwindlast_admin/package.json
+++ b/tailwindlast_admin/package.json
@@ -16,6 +16,7 @@
     "next-auth": "5.0.0-beta.19",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "xlsx-populate": "^1.21.0",
     "zod": "^3.23.8"
   },
