--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "@auth/prisma-adapter": "^2.7.0",
+        "@hookform/resolvers": "^3.9.0",
         "@prisma/client": "5.20.0",
         "classnames": "^2.5.1",
         "lucide-react": "^0.452.0",
@@ -21,6 +22,7 @@
         "react-dom": "^18.3.1",
         "react-hook-form": "^7.53.0",
         "react-icons": "^5.3.0",
+        "react-select": "^5.8.1",
         "xlsx-populate": "^1.21.0",
         "zod": "^3.23.8"
     },
