--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -10,17 +10,10 @@
     "bracketSameLine": false,
     "experimentalTernaries": true,
     "arrowParens": "always",
-    "plugins": [
-        "@trivago/prettier-plugin-sort-imports"
-    ],
-    "importOrder": [
-        "<THIRD_PARTY_MODULES>",
-        "^@/(.*)$",
-        "^@/api$",
-        "^(\\.|\\.\\.)/(.(?!.(css|scss)))*$",
-        "\\.(css|scss)$"
-    ],
     "importOrderSeparation": true,
     "importOrderSortSpecifiers": true,
-    "importOrderCaseInsensitive": true
+    "importOrderCaseInsensitive": true,
+    "plugins": [
+        "prettier-plugin-tailwindcss"
+    ]
 }
