--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
         "dev": "concurrently \"pnpm run dev:*\"",
         "dev:next": "next dev",
         "dev:prisma": "prisma generate --watch",
+        "prisma:studio": "prisma studio",
         "build": "next build",
         "start": "next start",
+        "format": "prettier --write ./src/*",
         "lint": "next lint"
     },
     "dependencies": {
@@ -36,6 +38,7 @@
         "eslint-config-next": "13.5.7",
         "postcss": "^8",
         "prettier": "^3.3.3",
+        "prettier-plugin-tailwindcss": "^0.6.8",
         "prisma": "^5.20.0",
         "tailwindcss": "^3.4.1",
         "typescript": "^5"
