--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
         "@auth/prisma-adapter": "^2.7.0",
         "@hookform/resolvers": "^3.9.0",
         "@prisma/client": "5.20.0",
+        "@radix-ui/react-icons": "^1.3.1",
+        "@radix-ui/themes": "^3.1.4",
         "classnames": "^2.5.1",
+        "clsx": "^2.1.1",
         "lucide-react": "^0.452.0",
         "next": "14.2.15",
         "next-auth": "5.0.0-beta.19",
@@ -25,6 +28,7 @@
         "react-hook-form": "^7.53.0",
         "react-icons": "^5.3.0",
         "react-select": "^5.8.1",
+        "tailwind-merge": "^2.5.4",
         "xlsx-populate": "^1.21.0",
         "zod": "^3.23.8"
     },
