--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "@auth/prisma-adapter": "^2.7.0",
         "@hookform/resolvers": "^3.9.0",
         "@prisma/client": "5.20.0",
+        "@radix-ui/react-accordion": "^1.2.1",
+        "@radix-ui/react-collapsible": "^1.1.1",
         "@radix-ui/react-dialog": "^1.1.2",
         "@radix-ui/react-icons": "^1.3.1",
         "@radix-ui/react-label": "^2.1.0",
