--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
         "build": "next build",
         "start": "next start",
         "format": "prettier --write ./src/*",
-        "lint": "next lint"
+        "lint": "next lint",
+        "read-excel": " tsx prisma/readexcel.ts",
+         "seed": " tsx prisma/seed.ts"
     },
     "dependencies": {
         "@auth/prisma-adapter": "^2.7.0",
@@ -60,6 +62,8 @@
         "prettier-plugin-tailwindcss": "^0.6.8",
         "prisma": "^5.20.0",
         "tailwindcss": "^3.4.1",
-        "typescript": "^5"
+        "ts-node": "^10.9.2",
+        "tsx": "^4.19.2",
+        "typescript": "^5.6.2"
     }
 }
