--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,6 @@
             "hooks": ["./src/hooks"]
         }
     },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "types"],
     "exclude": ["node_modules"]
 }
