--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "format": "prettier --write ./src/*",
         "lint": "next lint",
         "read-excel": " tsx prisma/readexcel.ts",
-         "seed": " tsx prisma/seed.ts"
+        "seed": " tsx prisma/seed.ts"
     },
     "dependencies": {
         "@auth/prisma-adapter": "^2.7.0",
@@ -35,6 +35,7 @@
         "classnames": "^2.5.1",
         "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
+        "i18next": "^24.2.2",
         "lucide-react": "^0.452.0",
         "next": "14.2.15",
         "next-auth": "5.0.0-beta.19",
@@ -42,6 +43,7 @@
         "react-day-picker": "8.10.1",
         "react-dom": "^18.3.1",
         "react-hook-form": "^7.53.0",
+        "react-i18next": "^15.4.1",
         "react-icons": "^5.3.0",
         "react-select": "^5.8.1",
         "tailwind-merge": "^2.5.4",
