--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
-DATABASE_URL="postgresql://postgres:Javi.Saymyname.12345*@localhost:5432/postgres?schema=public"
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres?schema=public"
 
 AUTH_SECRET=secret
+
+POSTGRES_DB=postgres
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
