--- a/package.json
+++ b/package.json
@@ -34,15 +34,16 @@
 		"@radix-ui/react-tooltip": "^1.2.0",
 		"@radix-ui/themes": "^3.2.1",
 		"@shadcn/ui": "^0.0.4",
+		"babel-plugin-react-compiler": "19.0.0-beta-ebf51a3-20250411",
 		"class-variance-authority": "^0.7.0",
 		"classnames": "^2.5.1",
-		"prisma": "^6.6.0",
 		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
 		"i18next": "^24.2.2",
 		"lucide-react": "^0.488.0",
 		"next": "15.3.0",
 		"next-auth": "5.0.0-beta.25",
+		"prisma": "^6.6.0",
 		"react": "19.1.0",
 		"react-day-picker": "9.6.7",
 		"react-dom": "19.1.0",
