--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres?schema=public"
+DATABASE_URL="postgresql://postgres:Javi.Saymyname.12345*@localhost:5432/postgres?schema=public"
 
 AUTH_SECRET=secret
 
