--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@hookform/resolvers": "^5.0.1",
 		"@prisma/client": "6.6.0",
 		"@radix-ui/react-accordion": "^1.2.4",
+		"@radix-ui/react-checkbox": "^1.3.2",
 		"@radix-ui/react-collapsible": "^1.1.4",
 		"@radix-ui/react-dialog": "^1.1.7",
 		"@radix-ui/react-icons": "^1.3.2",
