--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
 		"prettier": "^3.5.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"tailwindcss": "^3.4.1",
+		"ts-node": "^10.9.2",
+		"ts-node-esm": "^0.0.6",
 		"tsx": "^4.19.3",
 		"typescript": "^5.8.3"
 	}
