--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,27 @@
 services:
-  postgres:
-    container_name: postgres
+  db:
     image: postgres:latest
-    environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB} 
+    restart: unless-stopped
+    env_file:
+      - .env.production
+    volumes:
+      - pgdata:/var/lib/postgresql/data
     ports:
       - "5432:5432"
-    restart: always
+   
+
+  web:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    depends_on:
+      - db
+    ports:
+      - "3000:3000"
+    env_file:
+      - .env.production
+    restart: unless-stopped
+    # volumes: - ./ :/app    # NO montar en producción; descomenta solo para dev
+
+volumes:
+  pgdata:
